--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.19.0"
+        "@symfony/webpack-encore": "^0.19.0",
+        "jquery": "^3.3.1"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -9,5 +10,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production"
+    },
+    "dependencies": {
+        "bootstrap": "4.*"
     }
 }
